= ?.?.?
* bug fix
  * Filter on a date column.
  * Using date column caused FormPanel to crash.

* improvements
  * New DSL method (model) for declaring a model for grids
  * New DSL method (column) for declaring columns for grids
  * New :override_columns config option for grid allows overriding specified column config without influencing other columns' order/presence
  * New DSL method (override_column) to override a specific column config without influencing other columns' order/presence.
  * Grid's title is set to model's pluralized name by default.
  * New :read_only option for FormPanel - makes all fields read-only and removes the "Apply" button.

* API changes
  * Skip supporting ModelExtensions. The preferred way is using setters and getters on columns/fields.

= 0.7.1 - 2011-09-04
* bug fix
  * FormPanel: fix the netzke_load endpoint when association fields are present
  * dates were not displayed in date fields, and submitting a form with date fields might result in erasing those fields

* Rails 3.1 compatibility
  * no meta_where dependencies (searching and filtering done with Arel)

= 0.7.0 - 2011-08-09
* Core 0.7.0 and Ext 4 compatibility
* API changes
  * [JS] Removed the helper BorderLayoutPanel#get<Region>Component method altogether. Use Ext 4 Container#child instead

= v0.6.5 - to be released
* enhancements
  * When columns states are saved in the persistent storage, adding/removing columns (e.g. in the code) will reset the saved states
  * Moved features and specs to test/basepack_test_app
* bug fix
  * FormPanel with multiple association fields wouldn't submit data correctly
  * GridPanel's forms take over the +text+ configuration option for columns as +fieldLabel+ for default fields

= v0.6.4 - 2011-02-26
* API changes